<resources>
    <string name="app_name">TchatApp</string>
    <string name="username_hint">Your username</string>
    <string name="pwd_hint">Your password</string>
    <string name="connection">Connection</string>
    <string name="url_signin">http://192.168.60.45:8080/api/1/user/login</string>
    <string name="url_signup">http://192.168.60.45:8080/api/1/user/register</string>
    <string name="error_login">Login failed. Please check your login and password</string>
    <string name="error_signup">Signup failed</string>
    <string name="tchat_message">Your message</string>
    <string name="error_missing_msg">Missing message</string>
    <string name="url_msg" >http://192.168.60.45:8080/api/1/private/message</string>
    <string name="error_send_msg">Error sending message</string>
    <string name="refresh">Refresh</string>
    <string name="register">Signup</string>
    <string name="error_no_token">No token. Can\'t display activity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name_hint">Name</string>
    <string name="firstname_hint">Firstname</string>
</resources>
